<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment"
    android:padding="@dimen/_15sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:tint="@color/lightBlue"
            android:src="@drawable/menu"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_quran"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:fontFamily="@font/itimregular"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/darkBlue"/>

    </LinearLayout>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_2sdp"
        app:cardUseCompatPadding="false"
        android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/gradient"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/itimregular"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:text="@string/this_is_the_book_there_is_no_doubt_in_it_a_guidance_to_the_godwary"/>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/quran"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/darkBlue"
            app:tabTextColor="@color/darkBlue"
            app:tabTextAppearance="@style/TabItemTextAppearance"
            android:background="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surah"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/para"/>


            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hijb"/>

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </LinearLayout>


</LinearLayout>